--- a/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/embeddings.mdx
@@ -32,11 +32,19 @@ Embeddings
   id="inputs"
   headingId="operation-embeddings_v1_embeddings_post+request+inputs"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
 ##### inputs \{#operation-embeddings_v1_embeddings_post+request+inputs\}
+
+</div>
+
+<div slot="content">
+
+Text to embed.
 
 </div>
 
@@ -47,7 +55,9 @@ Embeddings
   id="model"
   headingId="operation-embeddings_v1_embeddings_post+request+model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -73,7 +83,9 @@ mistral-embed
   slot="entry"
   id="output_dimension"
   headingId="operation-embeddings_v1_embeddings_post+request+output_dimension"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -87,7 +99,9 @@ mistral-embed
   slot="entry"
   id="output_dtype"
   headingId="operation-embeddings_v1_embeddings_post+request+output_dtype"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -128,7 +142,9 @@ Successful Response
   id="data"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -138,7 +154,12 @@ Successful Response
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata" parentId="data">
+<ExpandableBreakout
+  slot="entry"
+  id="data_EmbeddingResponseData"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata" parentId="data"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -153,7 +174,9 @@ Successful Response
   id="data_EmbeddingResponseData_embedding"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+embedding"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -168,7 +191,9 @@ Successful Response
   id="data_EmbeddingResponseData_index"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+index"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -193,7 +218,9 @@ _Example:_
   id="data_EmbeddingResponseData_object"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+data+embeddingresponsedata+object"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -218,7 +245,9 @@ embedding
   id="id"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -243,7 +272,9 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
   id="model"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -268,7 +299,9 @@ mistral-small-latest
   id="object"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -293,7 +326,9 @@ chat.completion
   id="usage"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -303,27 +338,19 @@ chat.completion
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="usage_UsageInfo" headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo" parentId="usage">
-
-<div slot="title">
-
-#### UsageInfo \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_completion_tokens"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+completion_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_completion_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+completion_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+completion_tokens\}
+##### completion_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+completion_tokens\}
 
 </div>
 
@@ -341,15 +368,17 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_prompt_tokens"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+prompt_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_prompt_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+prompt_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+prompt_tokens\}
+##### prompt_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+prompt_tokens\}
 
 </div>
 
@@ -367,15 +396,17 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_total_tokens"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+total_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_total_tokens"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+total_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+usageinfo+total_tokens\}
+##### total_tokens \{#operation-embeddings_v1_embeddings_post+responses+200+application-json+usage+total_tokens\}
 
 </div>
 
@@ -412,7 +443,9 @@ Validation Error
   id="HttpMeta"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta"
   typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -422,27 +455,19 @@ Validation Error
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata" parentId="HttpMeta">
-
-<div slot="title">
-
-#### HTTPMetadata \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="HttpMeta_HTTPMetadata_Request"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+request"
-  parentId="HttpMeta_HTTPMetadata"
+  id="HttpMeta_Request"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+request"
+  parentId="HttpMeta"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### Request \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+request\}
+##### Request \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+request\}
 
 </div>
 
@@ -456,15 +481,17 @@ Raw HTTP request; suitable for debugging
 
 <ExpandableProperty
   slot="entry"
-  id="HttpMeta_HTTPMetadata_Response"
-  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+response"
-  parentId="HttpMeta_HTTPMetadata"
+  id="HttpMeta_Response"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+response"
+  parentId="HttpMeta"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### Response \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+httpmetadata+response\}
+##### Response \{#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+httpmeta+response\}
 
 </div>
 
@@ -480,7 +507,9 @@ Raw HTTP response; suitable for custom response parsing
   slot="entry"
   id="detail"
   headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -490,7 +519,12 @@ Raw HTTP response; suitable for custom response parsing
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="detail_ValidationError" headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror" parentId="detail">
+<ExpandableBreakout
+  slot="entry"
+  id="detail_ValidationError"
+  headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror" parentId="detail"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -506,7 +540,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+loc"
   parentId="detail_ValidationError"
   typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -522,7 +558,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+msg"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -538,7 +576,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post+responses+200+422+application-json+detail+validationerror+type"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
