--- a/examples/docusaurus/mistral/docs/api/tag/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/tag/files.mdx
@@ -40,7 +40,9 @@ OK
   id="data"
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+responses+200+application-json+data+fileschema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -50,7 +52,12 @@ OK
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_FileSchema" headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema" parentId="data">
+<ExpandableBreakout
+  slot="entry"
+  id="data_FileSchema"
+  headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema" parentId="data"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -66,7 +73,9 @@ OK
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+created_at"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -94,7 +103,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+filename"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -122,7 +133,9 @@ files_upload.jsonl
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+id"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -149,7 +162,9 @@ _Example:_
   id="data_FileSchema_num_lines"
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+num_lines"
   parentId="data_FileSchema"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -165,7 +180,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+object"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -193,7 +210,9 @@ file
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+purpose"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -209,7 +228,9 @@ file
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+sample_type"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -225,7 +246,9 @@ file
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+size_bytes"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -253,7 +276,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files+responses+200+application-json+data+fileschema+source"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -268,7 +293,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -283,7 +310,9 @@ _Example:_
   id="total"
   headingId="operation-files_api_routes_list_files+responses+200+application-json+total"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -326,21 +355,13 @@ Please contact us if you need to increase these storage limits.
   id="file"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file"
   typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file\">File</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
 ##### file \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file\}
-
-</div>
-
-</ExpandableProperty>
-
-<ExpandableBreakout slot="entry" id="file_File" headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file" parentId="file">
-
-<div slot="title">
-
-#### File \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file\}
 
 </div>
 
@@ -358,19 +379,21 @@ The File object (not file name) to be uploaded.
 
 </div>
 
-</ExpandableBreakout>
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
-  id="file_File_content"
-  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+content"
-  parentId="file_File"
+  id="file_content"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+content"
+  parentId="file"
   typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### content \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+content\}
+##### content \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+content\}
 
 </div>
 
@@ -378,15 +401,17 @@ The File object (not file name) to be uploaded.
 
 <ExpandableProperty
   slot="entry"
-  id="file_File_fileName"
-  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+filename"
-  parentId="file_File"
+  id="file_fileName"
+  headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+filename"
+  parentId="file"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### fileName \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+file+filename\}
+##### fileName \{#operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+file+filename\}
 
 </div>
 
@@ -396,7 +421,9 @@ The File object (not file name) to be uploaded.
   slot="entry"
   id="purpose"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+request+purpose"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -437,7 +464,9 @@ OK
   id="created_at"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -464,7 +493,9 @@ _Example:_
   id="filename"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -491,7 +522,9 @@ files_upload.jsonl
   id="id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -517,7 +550,9 @@ _Example:_
   slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+num_lines"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -532,7 +567,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -559,7 +596,9 @@ file
   id="purpose"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -574,7 +613,9 @@ file
   id="sample_type"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -589,7 +630,9 @@ file
   id="size_bytes"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -616,7 +659,9 @@ _Example:_
   id="source"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+responses+200+application-json+source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -655,7 +700,9 @@ Returns information about a specific file.
   id="file_id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -696,7 +743,9 @@ OK
   id="created_at"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -723,7 +772,9 @@ _Example:_
   id="deleted"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -738,7 +789,9 @@ _Example:_
   id="filename"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -765,7 +818,9 @@ files_upload.jsonl
   id="id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -791,7 +846,9 @@ _Example:_
   slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+num_lines"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -806,7 +863,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -833,7 +892,9 @@ file
   id="purpose"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -848,7 +909,9 @@ file
   id="sample_type"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -863,7 +926,9 @@ file
   id="size_bytes"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -890,7 +955,9 @@ _Example:_
   id="source"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+responses+200+application-json+source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -929,7 +996,9 @@ Delete a file.
   id="file_id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -970,7 +1039,9 @@ OK
   id="deleted"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -997,7 +1068,9 @@ false
   id="id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1024,7 +1097,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+responses+200+application-json+object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1075,7 +1150,9 @@ Download a file
   id="file_id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -1142,7 +1219,9 @@ Get Signed Url
   id="file_id"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters+file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -1157,7 +1236,9 @@ Get Signed Url
   id="expiry"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+parameters+expiry"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1204,7 +1285,9 @@ OK
   id="url"
   headingId="operation-files_api_routes_list_files+operation-files_api_routes_upload_file+operation-files_api_routes_retrieve_file+operation-files_api_routes_delete_file+operation-files_api_routes_download_file+operation-files_api_routes_get_signed_url+responses+200+application-json+url"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
