--- a/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/machines.mdx
@@ -31,7 +31,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_machine_list+security+cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -45,7 +47,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_machine_list+security+basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -78,7 +82,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   id="limit"
   headingId="operation-api_v2_machine_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -99,7 +105,9 @@ Number of results to return per page.
   id="offset"
   headingId="operation-api_v2_machine_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -120,7 +128,9 @@ The initial index from which to return the results.
   id="q"
   headingId="operation-api_v2_machine_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -165,7 +175,9 @@ Case-insensitive query applied on the `name` property.
   slot="entry"
   id="count"
   headingId="operation-api_v2_machine_list+responses+200+application-json+count"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -189,7 +201,9 @@ _Example:_
   slot="entry"
   id="next"
   headingId="operation-api_v2_machine_list+responses+200+application-json+next"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -213,7 +227,9 @@ http://api.example.org/accounts/?offset=400&limit=100
   slot="entry"
   id="previous"
   headingId="operation-api_v2_machine_list+responses+200+application-json+previous"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -237,7 +253,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   slot="entry"
   id="results"
   headingId="operation-api_v2_machine_list+responses+200+application-json+results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+responses+200+application-json+results+machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -247,7 +265,12 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_MachineSummary" headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary" parentId="results">
+<ExpandableBreakout
+  slot="entry"
+  id="results_MachineSummary"
+  headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary" parentId="results"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -263,7 +286,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_machine_list+responses+200+application-json+results+machinesummary+url"
   parentId="results_MachineSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -301,7 +326,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -315,7 +342,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+security+basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -348,7 +377,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   id="id"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -393,7 +424,9 @@ This parameter can be a string or an integer.
   id="id"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -408,7 +441,9 @@ This parameter can be a string or an integer.
   id="item"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item"
   typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -418,27 +453,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="item_ItemSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary" parentId="item">
-
-<div slot="title">
-
-#### ItemSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="item_ItemSummary_name"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+name"
-  parentId="item_ItemSummary"
+  id="item_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+name"
+  parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+name\}
 
 </div>
 
@@ -446,15 +473,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="item_ItemSummary_url"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+url"
-  parentId="item_ItemSummary"
+  id="item_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+url"
+  parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+itemsummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+item+url\}
 
 </div>
 
@@ -465,7 +494,9 @@ This parameter can be a string or an integer.
   id="move"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move"
   typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -475,27 +506,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="move_MoveSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary" parentId="move">
-
-<div slot="title">
-
-#### MoveSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="move_MoveSummary_name"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+name"
-  parentId="move_MoveSummary"
+  id="move_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+name"
+  parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+name\}
 
 </div>
 
@@ -503,15 +526,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="move_MoveSummary_url"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+url"
-  parentId="move_MoveSummary"
+  id="move_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+url"
+  parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+movesummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+move+url\}
 
 </div>
 
@@ -522,7 +547,9 @@ This parameter can be a string or an integer.
   id="version_group"
   headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group"
   typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -532,27 +559,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary" parentId="version_group">
-
-<div slot="title">
-
-#### VersionGroupSummary \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="version_group_VersionGroupSummary_name"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+name"
-  parentId="version_group_VersionGroupSummary"
+  id="version_group_name"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+name"
+  parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+name\}
+##### name \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+name\}
 
 </div>
 
@@ -560,15 +579,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="version_group_VersionGroupSummary_url"
-  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+url"
-  parentId="version_group_VersionGroupSummary"
+  id="version_group_url"
+  headingId="operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+url"
+  parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+versiongroupsummary+url\}
+##### url \{#operation-api_v2_machine_list+operation-api_v2_machine_retrieve+responses+200+application-json+version_group+url\}
 
 </div>
 
