--- a/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/embeddings/page.mdx
@@ -31,11 +31,19 @@ Embeddings
   id="inputs"
   headingId="operation-embeddings_v1_embeddings_post_request_inputs"
   typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
 ##### inputs [#operation-embeddings_v1_embeddings_post_request_inputs]
+
+</div>
+
+<div slot="content">
+
+Text to embed.
 
 </div>
 
@@ -46,7 +54,9 @@ Embeddings
   id="model"
   headingId="operation-embeddings_v1_embeddings_post_request_model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -72,7 +82,9 @@ mistral-embed
   slot="entry"
   id="output_dimension"
   headingId="operation-embeddings_v1_embeddings_post_request_output_dimension"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -86,7 +98,9 @@ mistral-embed
   slot="entry"
   id="output_dtype"
   headingId="operation-embeddings_v1_embeddings_post_request_output_dtype"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"float\"","linkedLabel":"\"float\"","children":[],"breakoutSubTypes":{}},{"label":"\"int8\"","linkedLabel":"\"int8\"","children":[],"breakoutSubTypes":{}},{"label":"\"uint8\"","linkedLabel":"\"uint8\"","children":[],"breakoutSubTypes":{}},{"label":"\"binary\"","linkedLabel":"\"binary\"","children":[],"breakoutSubTypes":{}},{"label":"\"ubinary\"","linkedLabel":"\"ubinary\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -127,7 +141,9 @@ Successful Response
   id="data"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata\">EmbeddingResponseData</a>","children":[{"label":"EmbeddingResponseData","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata\">EmbeddingResponseData</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -137,7 +153,12 @@ Successful Response
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_EmbeddingResponseData" headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata" parentId="data">
+<ExpandableBreakout
+  slot="entry"
+  id="data_EmbeddingResponseData"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata" parentId="data"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -152,7 +173,9 @@ Successful Response
   id="data_EmbeddingResponseData_embedding"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_embedding"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"number","children":[{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -167,7 +190,9 @@ Successful Response
   id="data_EmbeddingResponseData_index"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_index"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -192,7 +217,9 @@ _Example:_
   id="data_EmbeddingResponseData_object"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_data_embeddingresponsedata_object"
   parentId="data_EmbeddingResponseData"
-  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -217,7 +244,9 @@ embedding
   id="id"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -242,7 +271,9 @@ cmpl-e5cc70bb28c444948073e77776eb30ef
   id="model"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_model"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -267,7 +298,9 @@ mistral-small-latest
   id="object"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -292,7 +325,9 @@ chat.completion
   id="usage"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage"
   typeInfo={{"label":"UsageInfo","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo\">UsageInfo</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -302,27 +337,19 @@ chat.completion
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="usage_UsageInfo" headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo" parentId="usage">
-
-<div slot="title">
-
-#### UsageInfo [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_completion_tokens"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_completion_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_completion_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_completion_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### completion_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_completion_tokens]
+##### completion_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_completion_tokens]
 
 </div>
 
@@ -340,15 +367,17 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_prompt_tokens"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_prompt_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_prompt_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_prompt_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### prompt_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_prompt_tokens]
+##### prompt_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_prompt_tokens]
 
 </div>
 
@@ -366,15 +395,17 @@ _Example:_
 
 <ExpandableProperty
   slot="entry"
-  id="usage_UsageInfo_total_tokens"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_total_tokens"
-  parentId="usage_UsageInfo"
+  id="usage_total_tokens"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_total_tokens"
+  parentId="usage"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### total_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_usageinfo_total_tokens]
+##### total_tokens [#operation-embeddings_v1_embeddings_post_responses_200_application-json_usage_total_tokens]
 
 </div>
 
@@ -411,7 +442,9 @@ Validation Error
   id="HttpMeta"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta"
   typeInfo={{"label":"HTTPMetadata","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata\">HTTPMetadata</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -421,27 +454,19 @@ Validation Error
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="HttpMeta_HTTPMetadata" headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata" parentId="HttpMeta">
-
-<div slot="title">
-
-#### HTTPMetadata [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="HttpMeta_HTTPMetadata_Request"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_request"
-  parentId="HttpMeta_HTTPMetadata"
+  id="HttpMeta_Request"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_request"
+  parentId="HttpMeta"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### Request [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_request]
+##### Request [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_request]
 
 </div>
 
@@ -455,15 +480,17 @@ Raw HTTP request; suitable for debugging
 
 <ExpandableProperty
   slot="entry"
-  id="HttpMeta_HTTPMetadata_Response"
-  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_response"
-  parentId="HttpMeta_HTTPMetadata"
+  id="HttpMeta_Response"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_response"
+  parentId="HttpMeta"
   typeInfo={{"label":"any","linkedLabel":"any","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
-##### Response [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_httpmetadata_response]
+##### Response [#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_httpmeta_response]
 
 </div>
 
@@ -479,7 +506,9 @@ Raw HTTP response; suitable for custom response parsing
   slot="entry"
   id="detail"
   headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[{"label":"ValidationError","linkedLabel":"<a href=\"#operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror\">ValidationError</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -489,7 +518,12 @@ Raw HTTP response; suitable for custom response parsing
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="detail_ValidationError" headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror" parentId="detail">
+<ExpandableBreakout
+  slot="entry"
+  id="detail_ValidationError"
+  headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror" parentId="detail"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -505,7 +539,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_loc"
   parentId="detail_ValidationError"
   typeInfo={{"label":"array","linkedLabel":"union","children":[{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -521,7 +557,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_msg"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -537,7 +575,9 @@ Raw HTTP response; suitable for custom response parsing
   headingId="operation-embeddings_v1_embeddings_post_responses_200_422_application-json_detail_validationerror_type"
   parentId="detail_ValidationError"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
