--- a/examples/nextra/pokeapi/src/app/api/tag/machines/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/machines/page.mdx
@@ -30,7 +30,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_machine_list_security_cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -44,7 +46,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_machine_list_security_basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -77,7 +81,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   id="limit"
   headingId="operation-api_v2_machine_list_parameters_limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -98,7 +104,9 @@ Number of results to return per page.
   id="offset"
   headingId="operation-api_v2_machine_list_parameters_offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -119,7 +127,9 @@ The initial index from which to return the results.
   id="q"
   headingId="operation-api_v2_machine_list_parameters_q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -164,7 +174,9 @@ Case-insensitive query applied on the `name` property.
   slot="entry"
   id="count"
   headingId="operation-api_v2_machine_list_responses_200_application-json_count"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -188,7 +200,9 @@ _Example:_
   slot="entry"
   id="next"
   headingId="operation-api_v2_machine_list_responses_200_application-json_next"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -212,7 +226,9 @@ http://api.example.org/accounts/?offset=400&limit=100
   slot="entry"
   id="previous"
   headingId="operation-api_v2_machine_list_responses_200_application-json_previous"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -236,7 +252,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   slot="entry"
   id="results"
   headingId="operation-api_v2_machine_list_responses_200_application-json_results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[{"label":"MachineSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_responses_200_application-json_results_machinesummary\">MachineSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -246,7 +264,12 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_MachineSummary" headingId="operation-api_v2_machine_list_responses_200_application-json_results_machinesummary" parentId="results">
+<ExpandableBreakout
+  slot="entry"
+  id="results_MachineSummary"
+  headingId="operation-api_v2_machine_list_responses_200_application-json_results_machinesummary" parentId="results"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -262,7 +285,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_machine_list_responses_200_application-json_results_machinesummary_url"
   parentId="results_MachineSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -300,7 +325,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -314,7 +341,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_security_basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -347,7 +376,9 @@ Machines are the representation of items that teach moves to Pokémon. They vary
   id="id"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_parameters_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -392,7 +423,9 @@ This parameter can be a string or an integer.
   id="id"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -407,7 +440,9 @@ This parameter can be a string or an integer.
   id="item"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item"
   typeInfo={{"label":"ItemSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary\">ItemSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -417,27 +452,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="item_ItemSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary" parentId="item">
-
-<div slot="title">
-
-#### ItemSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="item_ItemSummary_name"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_name"
-  parentId="item_ItemSummary"
+  id="item_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_name"
+  parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_name]
 
 </div>
 
@@ -445,15 +472,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="item_ItemSummary_url"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_url"
-  parentId="item_ItemSummary"
+  id="item_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_url"
+  parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_itemsummary_url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_item_url]
 
 </div>
 
@@ -464,7 +493,9 @@ This parameter can be a string or an integer.
   id="move"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move"
   typeInfo={{"label":"MoveSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary\">MoveSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -474,27 +505,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="move_MoveSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary" parentId="move">
-
-<div slot="title">
-
-#### MoveSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="move_MoveSummary_name"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_name"
-  parentId="move_MoveSummary"
+  id="move_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_name"
+  parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_name]
 
 </div>
 
@@ -502,15 +525,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="move_MoveSummary_url"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_url"
-  parentId="move_MoveSummary"
+  id="move_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_url"
+  parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_movesummary_url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_move_url]
 
 </div>
 
@@ -521,7 +546,9 @@ This parameter can be a string or an integer.
   id="version_group"
   headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group"
   typeInfo={{"label":"VersionGroupSummary","linkedLabel":"<a href=\"#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary\">VersionGroupSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -531,27 +558,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="version_group_VersionGroupSummary" headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary" parentId="version_group">
-
-<div slot="title">
-
-#### VersionGroupSummary [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="version_group_VersionGroupSummary_name"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_name"
-  parentId="version_group_VersionGroupSummary"
+  id="version_group_name"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_name"
+  parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_name]
+##### name [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_name]
 
 </div>
 
@@ -559,15 +578,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="version_group_VersionGroupSummary_url"
-  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_url"
-  parentId="version_group_VersionGroupSummary"
+  id="version_group_url"
+  headingId="operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_url"
+  parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_versiongroupsummary_url]
+##### url [#operation-api_v2_machine_list_operation-api_v2_machine_retrieve_responses_200_application-json_version_group_url]
 
 </div>
 
