--- a/examples/nextra/pokeapi/src/app/api/tag/utility/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/tag/utility/page.mdx
@@ -30,7 +30,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_language_list_security_cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -44,7 +46,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_language_list_security_basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -77,7 +81,9 @@ Languages for translations of API resource information.
   id="limit"
   headingId="operation-api_v2_language_list_parameters_limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -98,7 +104,9 @@ Number of results to return per page.
   id="offset"
   headingId="operation-api_v2_language_list_parameters_offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -119,7 +127,9 @@ The initial index from which to return the results.
   id="q"
   headingId="operation-api_v2_language_list_parameters_q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -164,7 +174,9 @@ Case-insensitive query applied on the `name` property.
   slot="entry"
   id="count"
   headingId="operation-api_v2_language_list_responses_200_application-json_count"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -188,7 +200,9 @@ _Example:_
   slot="entry"
   id="next"
   headingId="operation-api_v2_language_list_responses_200_application-json_next"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -212,7 +226,9 @@ http://api.example.org/accounts/?offset=400&limit=100
   slot="entry"
   id="previous"
   headingId="operation-api_v2_language_list_responses_200_application-json_previous"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -236,7 +252,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   slot="entry"
   id="results"
   headingId="operation-api_v2_language_list_responses_200_application-json_results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_responses_200_application-json_results_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -246,7 +264,12 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_LanguageSummary" headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary" parentId="results">
+<ExpandableBreakout
+  slot="entry"
+  id="results_LanguageSummary"
+  headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary" parentId="results"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -262,7 +285,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary_name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -278,7 +303,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary_url"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -316,7 +343,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_security_cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -330,7 +359,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_security_basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -363,7 +394,9 @@ Languages for translations of API resource information.
   id="id"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_parameters_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -408,7 +441,9 @@ This parameter can be a string or an integer.
   id="id"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -423,7 +458,9 @@ This parameter can be a string or an integer.
   id="iso3166"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -438,7 +475,9 @@ This parameter can be a string or an integer.
   id="iso639"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -453,7 +492,9 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -468,7 +509,9 @@ This parameter can be a string or an integer.
   id="names"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -478,7 +521,12 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName" headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename" parentId="names">
+<ExpandableBreakout
+  slot="entry"
+  id="names_LanguageName"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename" parentId="names"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -494,7 +542,9 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language"
   parentId="names_LanguageName"
   typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -504,27 +554,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary" parentId="names_LanguageName_language">
-
-<div slot="title">
-
-#### LanguageSummary [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary]
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="names_LanguageName_language_LanguageSummary_name"
-  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_name"
-  parentId="names_LanguageName_language_LanguageSummary"
+  id="names_LanguageName_language_name"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_name"
+  parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_name]
+##### name [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_name]
 
 </div>
 
@@ -532,15 +574,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="names_LanguageName_language_LanguageSummary_url"
-  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_url"
-  parentId="names_LanguageName_language_LanguageSummary"
+  id="names_LanguageName_language_url"
+  headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_url"
+  parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_languagesummary_url]
+##### url [#operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_url]
 
 </div>
 
@@ -552,7 +596,9 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -566,7 +612,9 @@ This parameter can be a string or an integer.
   slot="entry"
   id="official"
   headingId="operation-api_v2_language_list_operation-api_v2_language_retrieve_responses_200_application-json_official"
-  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
