--- a/examples/docusaurus/pokeapi/docs/api/tag/utility.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/tag/utility.mdx
@@ -31,7 +31,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_language_list+security+cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -45,7 +47,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_language_list+security+basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -78,7 +82,9 @@ Languages for translations of API resource information.
   id="limit"
   headingId="operation-api_v2_language_list+parameters+limit"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -99,7 +105,9 @@ Number of results to return per page.
   id="offset"
   headingId="operation-api_v2_language_list+parameters+offset"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -120,7 +128,9 @@ The initial index from which to return the results.
   id="q"
   headingId="operation-api_v2_language_list+parameters+q"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -165,7 +175,9 @@ Case-insensitive query applied on the `name` property.
   slot="entry"
   id="count"
   headingId="operation-api_v2_language_list+responses+200+application-json+count"
-  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -189,7 +201,9 @@ _Example:_
   slot="entry"
   id="next"
   headingId="operation-api_v2_language_list+responses+200+application-json+next"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -213,7 +227,9 @@ http://api.example.org/accounts/?offset=400&limit=100
   slot="entry"
   id="previous"
   headingId="operation-api_v2_language_list+responses+200+application-json+previous"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -237,7 +253,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   slot="entry"
   id="results"
   headingId="operation-api_v2_language_list+responses+200+application-json+results"
-  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+responses+200+application-json+results+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -247,7 +265,12 @@ http://api.example.org/accounts/?offset=200&limit=100
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="results_LanguageSummary" headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary" parentId="results">
+<ExpandableBreakout
+  slot="entry"
+  id="results_LanguageSummary"
+  headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary" parentId="results"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -263,7 +286,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary+name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -279,7 +304,9 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary+url"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -317,7 +344,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="cookieAuth"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+security+cookieauth"
-  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}>
+  typeAnnotations={[{"title":"cookie","variant":"info"},{"title":"apiKey","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -331,7 +360,9 @@ Languages for translations of API resource information.
   slot="entry"
   id="basicAuth"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+security+basicauth"
-  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}>
+  typeAnnotations={[{"title":"basic","variant":"info"},{"title":"http","variant":"info"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -364,7 +395,9 @@ Languages for translations of API resource information.
   id="id"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+parameters+id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -409,7 +442,9 @@ This parameter can be a string or an integer.
   id="id"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+id"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -424,7 +459,9 @@ This parameter can be a string or an integer.
   id="iso3166"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -439,7 +476,9 @@ This parameter can be a string or an integer.
   id="iso639"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -454,7 +493,9 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -469,7 +510,9 @@ This parameter can be a string or an integer.
   id="names"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\">LanguageName</a>","children":[{"label":"LanguageName","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename\">LanguageName</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -479,7 +522,12 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName" headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename" parentId="names">
+<ExpandableBreakout
+  slot="entry"
+  id="names_LanguageName"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename" parentId="names"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -495,7 +543,9 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language"
   parentId="names_LanguageName"
   typeInfo={{"label":"LanguageSummary","linkedLabel":"<a href=\"#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary\">LanguageSummary</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -505,27 +555,19 @@ This parameter can be a string or an integer.
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="names_LanguageName_language_LanguageSummary" headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary" parentId="names_LanguageName_language">
-
-<div slot="title">
-
-#### LanguageSummary \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary\}
-
-</div>
-
-</ExpandableBreakout>
-
 <ExpandableProperty
   slot="entry"
-  id="names_LanguageName_language_LanguageSummary_name"
-  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+name"
-  parentId="names_LanguageName_language_LanguageSummary"
+  id="names_LanguageName_language_name"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+name"
+  parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+name\}
+##### name \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+name\}
 
 </div>
 
@@ -533,15 +575,17 @@ This parameter can be a string or an integer.
 
 <ExpandableProperty
   slot="entry"
-  id="names_LanguageName_language_LanguageSummary_url"
-  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+url"
-  parentId="names_LanguageName_language_LanguageSummary"
+  id="names_LanguageName_language_url"
+  headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+url"
+  parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### url \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+languagesummary+url\}
+##### url \{#operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+url\}
 
 </div>
 
@@ -553,7 +597,9 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -567,7 +613,9 @@ This parameter can be a string or an integer.
   slot="entry"
   id="official"
   headingId="operation-api_v2_language_list+operation-api_v2_language_retrieve+responses+200+application-json+official"
-  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
