--- a/examples/nextra/mistral/src/app/api/tag/files/page.mdx
+++ b/examples/nextra/mistral/src/app/api/tag/files/page.mdx
@@ -39,7 +39,9 @@ OK
   id="data"
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data"
   typeInfo={{"label":"array","linkedLabel":"<a href=\"#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema\">FileSchema</a>","children":[{"label":"FileSchema","linkedLabel":"<a href=\"#operation-files_api_routes_list_files_responses_200_application-json_data_fileschema\">FileSchema</a>","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -49,7 +51,12 @@ OK
 
 </ExpandableProperty>
 
-<ExpandableBreakout slot="entry" id="data_FileSchema" headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema" parentId="data">
+<ExpandableBreakout
+  slot="entry"
+  id="data_FileSchema"
+  headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema" parentId="data"
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -65,7 +72,9 @@ OK
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_created_at"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -93,7 +102,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_filename"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -121,7 +132,9 @@ files_upload.jsonl
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_id"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -148,7 +161,9 @@ _Example:_
   id="data_FileSchema_num_lines"
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_num_lines"
   parentId="data_FileSchema"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -164,7 +179,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_object"
   parentId="data_FileSchema"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -192,7 +209,9 @@ file
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_purpose"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -208,7 +227,9 @@ file
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_sample_type"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -224,7 +245,9 @@ file
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_size_bytes"
   parentId="data_FileSchema"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -252,7 +275,9 @@ _Example:_
   headingId="operation-files_api_routes_list_files_responses_200_application-json_data_fileschema_source"
   parentId="data_FileSchema"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -267,7 +292,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -282,7 +309,9 @@ _Example:_
   id="total"
   headingId="operation-files_api_routes_list_files_responses_200_application-json_total"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -325,21 +354,13 @@ Please contact us if you need to increase these storage limits.
   id="file"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file"
   typeInfo={{"label":"File","linkedLabel":"<a href=\"#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file\">File</a>","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
 ##### file [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file]
-
-</div>
-
-</ExpandableProperty>
-
-<ExpandableBreakout slot="entry" id="file_File" headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file" parentId="file">
-
-<div slot="title">
-
-#### File [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file]
 
 </div>
 
@@ -357,19 +378,21 @@ The File object (not file name) to be uploaded.
 
 </div>
 
-</ExpandableBreakout>
+</ExpandableProperty>
 
 <ExpandableProperty
   slot="entry"
-  id="file_File_content"
-  headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file_content"
-  parentId="file_File"
+  id="file_content"
+  headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_content"
+  parentId="file"
   typeInfo={{"label":"binary","linkedLabel":"binary","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### content [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file_content]
+##### content [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_content]
 
 </div>
 
@@ -377,15 +400,17 @@ The File object (not file name) to be uploaded.
 
 <ExpandableProperty
   slot="entry"
-  id="file_File_fileName"
-  headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file_filename"
-  parentId="file_File"
+  id="file_fileName"
+  headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_filename"
+  parentId="file"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
-##### fileName [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_file_filename]
+##### fileName [#operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_file_filename]
 
 </div>
 
@@ -395,7 +420,9 @@ The File object (not file name) to be uploaded.
   slot="entry"
   id="purpose"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_request_purpose"
-  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -436,7 +463,9 @@ OK
   id="created_at"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -463,7 +492,9 @@ _Example:_
   id="filename"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -490,7 +521,9 @@ files_upload.jsonl
   id="id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -516,7 +549,9 @@ _Example:_
   slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_num_lines"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -531,7 +566,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -558,7 +595,9 @@ file
   id="purpose"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -573,7 +612,9 @@ file
   id="sample_type"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -588,7 +629,9 @@ file
   id="size_bytes"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -615,7 +658,9 @@ _Example:_
   id="source"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_responses_200_application-json_source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -654,7 +699,9 @@ Returns information about a specific file.
   id="file_id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_parameters_file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -695,7 +742,9 @@ OK
   id="created_at"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_created_at"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -722,7 +771,9 @@ _Example:_
   id="deleted"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -737,7 +788,9 @@ _Example:_
   id="filename"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_filename"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -764,7 +817,9 @@ files_upload.jsonl
   id="id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -790,7 +845,9 @@ _Example:_
   slot="entry"
   id="num_lines"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_num_lines"
-  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}>
+  typeInfo={{"label":"union","linkedLabel":"union","children":[{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}},{"label":"null","linkedLabel":"null","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -805,7 +862,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -832,7 +891,9 @@ file
   id="purpose"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_purpose"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"fine-tune\"","linkedLabel":"\"fine-tune\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch\"","linkedLabel":"\"batch\"","children":[],"breakoutSubTypes":{}},{"label":"\"ocr\"","linkedLabel":"\"ocr\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -847,7 +908,9 @@ file
   id="sample_type"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_sample_type"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"pretrain\"","linkedLabel":"\"pretrain\"","children":[],"breakoutSubTypes":{}},{"label":"\"instruct\"","linkedLabel":"\"instruct\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_request\"","linkedLabel":"\"batch_request\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_result\"","linkedLabel":"\"batch_result\"","children":[],"breakoutSubTypes":{}},{"label":"\"batch_error\"","linkedLabel":"\"batch_error\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -862,7 +925,9 @@ file
   id="size_bytes"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_size_bytes"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -889,7 +954,9 @@ _Example:_
   id="source"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_responses_200_application-json_source"
   typeInfo={{"label":"enum","linkedLabel":"enum","children":[{"label":"\"upload\"","linkedLabel":"\"upload\"","children":[],"breakoutSubTypes":{}},{"label":"\"repository\"","linkedLabel":"\"repository\"","children":[],"breakoutSubTypes":{}},{"label":"\"mistral\"","linkedLabel":"\"mistral\"","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -928,7 +995,9 @@ Delete a file.
   id="file_id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_parameters_file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -969,7 +1038,9 @@ OK
   id="deleted"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_responses_200_application-json_deleted"
   typeInfo={{"label":"boolean","linkedLabel":"boolean","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -996,7 +1067,9 @@ false
   id="id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_responses_200_application-json_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1023,7 +1096,9 @@ _Example:_
   id="object"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_responses_200_application-json_object"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1074,7 +1149,9 @@ Download a file
   id="file_id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_operation-files_api_routes_download_file_parameters_file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -1141,7 +1218,9 @@ Get Signed Url
   id="file_id"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_operation-files_api_routes_download_file_operation-files_api_routes_get_signed_url_parameters_file_id"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"path","variant":"info"},{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
@@ -1156,7 +1235,9 @@ Get Signed Url
   id="expiry"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_operation-files_api_routes_download_file_operation-files_api_routes_get_signed_url_parameters_expiry"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"query","variant":"info"}]}>
+  typeAnnotations={[{"title":"query","variant":"info"}]}
+  hasFrontMatter={true}
+>
 
 <div slot="title">
 
@@ -1203,7 +1284,9 @@ OK
   id="url"
   headingId="operation-files_api_routes_list_files_operation-files_api_routes_upload_file_operation-files_api_routes_retrieve_file_operation-files_api_routes_delete_file_operation-files_api_routes_download_file_operation-files_api_routes_get_signed_url_responses_200_application-json_url"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}>
+  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  hasFrontMatter={false}
+>
 
 <div slot="title">
 
